# rag-project

./: .env.sample  .gitignore  AGENT.md  CLAUDE.md  README.md  api.py  contents_to_vectordb.py  download_models.py  elastic_search.py  elasticsearch_manager.py  embedding.ipynb  hyde.ipynb  hyde_pipeline.py  load_notion_data.py  main_workflow.py  mermaid.md  notion_loader.py  notion_rag_현철.ipynb  pyproject.toml  pytest.ini  requirements-eval.txt  requirements.txt  run_hyde_search.py  search_pipeline.py  text_processor.py
.junie/: guidelines.md  reviewer_role.md
api/: main.py
apps/: api.py  main.py
apps/common/: config.py  logger.py
apps/gear/: gear.py  (+5 more)
config/: __init__.py
embedding/: embedding.ipynb  recursive.ipynb
langgraph_utils/: graph.py  resources.py
notion_API/: README  chroma_books.sqlite3  get_notion_content  get_notion_page(david).ipynb  notion_rag_현철.ipynb
rag_ex/: GEMINI.md  JUNIE-ANA.md  README.md  test-formatter.py
refactoring/: config.json  config.py  contents_to_vectordb.py  hyde_langgraph.py  hyde_pipeline.py  load_notion_data.py  rag_prompts.py  retrieval.py
retreival/: README  retreivalTest_bm25+Sim.ipynb
retrieval/: Retriver.ipynb  hyde.ipynb  retreivalTest_bm25+Sim+queryexpansion(현철).ipynb  retreivalTest_dec+rerank.ipynb
template/: state_chat_state.py
tests/: conftest.py  eval_guide.md  final_report.md  golden_set.json  golden_set_100.json  qa_snapshot.json  rag_quality_report.md  ragas_result.json  refactoring_log.md  review_guide.md  test_crag_graph.py  test_elastic_store.py  test_elasticsearch_manager.py  test_evidence_quality.py  test_generation_quality.py  test_integration.py  test_notion_client.py  test_notion_loader.py  test_persona_selfrag_integration.py  test_query_api.py  test_rag_agent.py  test_ragas.py  test_run_hyde_search.py  test_search_pipeline.py  test_search_quality.py  test_tavily_search.py  test_text_processor.py  user_test_log.md
(+136 files in other folders)
