[project]
name = "rag-project"
version = "0.1.0"
description = "LangGraph based Multi-turn RAG System"
requires-python = ">=3.11"

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
# E, F: 기본 에러/플래이크, I: isort(임포트 정렬), B: 버그 예방, UP: 최신 문법
select = ["E", "F", "I", "B", "UP"]
ignore = ["D100", "D104"] # 필요에 따라 무시할 규칙 추가

[tool.ruff.lint.isort]
# 한글 주석 보존을 위해 설정
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]